--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "i18next": "^23.4.5",
     "next": "13.4.13",
+    "next-translate": "^2.5.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "next-translate-plugin": "^2.5.3"
   }
 }
